Fix module name

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"task1":{"title":"task1","description":"yeeee"}}
+{"task1":{"title":"task1","description":"yeeee"},"task2":{"title":"task2","description":"yeeee"}}
